--- a/CrudTest.Presentation/Server/CrudTest.Presentation.Server.csproj
+++ b/CrudTest.Presentation/Server/CrudTest.Presentation.Server.csproj
@@ -5,13 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.11" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Front\CrudTest.Presentation.Front.csproj" />
     <ProjectReference Include="..\Shared\CrudTest.Presentation.Shared.csproj" />
   </ItemGroup>
-
 
 </Project>
