--- a/CrudTest.Presentation/Shared/CrudTest.Presentation.Shared.csproj
+++ b/CrudTest.Presentation/Shared/CrudTest.Presentation.Shared.csproj
@@ -5,6 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\CrudTest.Domain\CrudTest.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <SupportedPlatform Include="browser" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="CQRS\Command\Customer\" />
   </ItemGroup>
 </Project>
