--- a/CrudTest.Domain/CrudTest.Domain.csproj
+++ b/CrudTest.Domain/CrudTest.Domain.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.0" />
-  </ItemGroup>
-
+	<PropertyGroup>
+		<TargetFrameworks>
+			net5.0
+		</TargetFrameworks>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.0" />
+	</ItemGroup>
 </Project>
