--- a/CrudTest.Presentation/Server/CrudTest.Presentation.Server.csproj
+++ b/CrudTest.Presentation/Server/CrudTest.Presentation.Server.csproj
@@ -1,16 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFrameworks>
+			net5.0
+		</TargetFrameworks>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0"/>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.0"/>
   </ItemGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\Shared\CrudTest.Presentation.Shared.csproj" />
+    <ProjectReference Include="..\Shared\CrudTest.Presentation.Shared.csproj"/>
   </ItemGroup>
-
 </Project>
