--- a/CrudTest.Domain/CrudTest.Domain.csproj
+++ b/CrudTest.Domain/CrudTest.Domain.csproj
@@ -1,8 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>
-			net5.0
-		</TargetFrameworks>
+		<TargetFramework>net5.0</TargetFramework>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.0" />
