--- a/CrudTest.Presentation/Front/CrudTest.Presentation.Front.csproj
+++ b/CrudTest.Presentation/Front/CrudTest.Presentation.Front.csproj
@@ -1,8 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 	<PropertyGroup>
-		<TargetFrameworks>
-			net5.0
-		</TargetFrameworks>
+		<TargetFramework>net5.0</TargetFramework>
 		<RootNamespace>
 			CrudTest.Presentation.Front
 		</RootNamespace>
