--- a/CrudTest.Presentation/Server/CrudTest.Presentation.Server.csproj
+++ b/CrudTest.Presentation/Server/CrudTest.Presentation.Server.csproj
@@ -1,8 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFrameworks>
-			net5.0
-		</TargetFrameworks>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0"/>
