--- a/CrudTest.Presentation/Server/appsettings.json
+++ b/CrudTest.Presentation/Server/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppDbContext" : "Host=postgres;Database=CrudTaskDb;Username=postgres;Password=root"
+  }
 }
