--- a/CrudTest.Presentation/Shared/CrudTest.Presentation.Shared.csproj
+++ b/CrudTest.Presentation/Shared/CrudTest.Presentation.Shared.csproj
@@ -1,8 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>
-			net5.0
-		</TargetFrameworks>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="libphonenumber-csharp" Version="8.12.34"/>
