--- a/CrudTest.Presentation/Server/appsettings.json
+++ b/CrudTest.Presentation/Server/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppDbContext" : "Host=postgres;Database=CrudTaskDb;Username=postgres;Password=root"
+    "AppDbContext" : "Host=127.0.0.1;Database=CrudTaskDb;Username=postgres;Password=Mohammad1250633672"
   }
 }
